# RapidDocCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  setup.sh
.cursor/rules/: 00-core.mdc  10-scripts.mdc  20-cmake.mdc  30-argparse.mdc  40-deepx-npu.mdc
.github/: copilot-instructions.md
app/: CMakeLists.txt  main.cpp
cmake/: BuildOpenCV.cmake  FetchPoppler.cmake  FindONNXRuntime.cmake
demo/: gradio_app.py  requirements-gradio.txt
docs/: perf_campaign_phase1.md  perf_phase2_ocr_shadow_analysis.md  phase3_mixed_ocr_async_utilization.md
engine/model_files/: README.md
include/common/: config.h  logger.h  perf_utils.h  types.h
include/formula/: formula_recognizer.h
include/layout/: layout_detector.h
include/output/: content_list.h  detail_report.h  markdown_writer.h
include/pdf/: pdf_renderer.h
include/pipeline/: doc_pipeline.h  ocr_pipeline.h
include/reading_order/: xycut.h
include/server/: server.h
include/table/: table_classifier.h  table_recognizer.h  table_wireless_recognizer.h
output-benchmark/: phase3_layout_full_chain_page_immediate_clean.json  phase3_layout_full_chain_serial_immediate.json  phase3_layout_full_chain_shadow.json
output-benchmark/readme_finegrained_mandatory_20260414_110640/: cpp_readme_suite_with_python_baseline.json
report/: analyze_phase2_ocr_shadow.py  readme_benchmark_parity_status.md  run_multinpu_bench.py
src/common/: CMakeLists.txt  config.cpp  perf_utils.cpp  types.cpp
src/formula/: CMakeLists.txt  formula_recognizer.cpp
src/layout/: CMakeLists.txt  layout_detector.cpp
src/output/: CMakeLists.txt  content_list.cpp  detail_report.cpp  markdown_writer.cpp
src/pdf/: CMakeLists.txt  pdf_renderer.cpp
src/pipeline/: CMakeLists.txt  doc_pipeline.cpp
src/reading_order/: CMakeLists.txt  xycut.cpp
src/server/: CMakeLists.txt  server.cpp  server_main.cpp  topology_lb_main.cpp
src/table/: CMakeLists.txt  table_classifier.cpp  table_recognizer.cpp  table_wireless_recognizer.cpp
test/: .gitkeep  CMakeLists.txt  dump_utils.h  http_npu_test_server_main.cpp  http_test_server_main.cpp  metrics.cpp  metrics.h  npy_loader.cpp  npy_loader.h  test_access.h  test_detail_report.cpp  test_doc_pipeline.cpp  test_e2e_pipeline.cpp  test_layout_detector.cpp  test_layout_nms_standalone.cpp  test_layout_postprocess.cpp  test_layout_preprocess.cpp  test_live_inference.cpp  test_metrics.cpp  test_ocr_integration.cpp  test_output.cpp  test_pdf_renderer.cpp  test_perf_utils.cpp  test_phase1_contracts.cpp  test_phase1_http_integration.cpp  test_phase1_integration.cpp  test_phase2_npu_concurrency.cpp  test_reading_order.cpp  test_server.cpp  test_table_classifier_parity.cpp  test_table_inference.cpp  test_table_postprocess.cpp  test_table_preprocess.cpp  test_table_recognizer.cpp  test_table_wireless_recognizer.cpp  test_tensor_compare.cpp  test_topology_lb_integration.cpp
test/fixtures/layout/: boxes.json  cpp_dxnn_out_0.npy  cpp_dxnn_out_1.npy  cpp_preprocessed.npy  dxnn_out_0.npy  dxnn_out_1.npy  onnx_boxes_raw.npy  preprocess_info.json  preprocessed.npy  scale_factor.npy
test/fixtures/ocr/: det_boxes.json  rec_results.json
test/fixtures/table/: cpp_seg_mask.npy  morph_info.json  preprocess_info.json  preprocessed.npy  seg_mask_before_crop.npy
test/test_utils/: tensor_compare.h
tools/: compare_e2e.py  compare_table_structure.py  gen_test_vectors.py  npu_concurrency_probe.py  npu_topology_probe.py  rapid_doc_bench.cpp  render_table_html.py  repro_request_ingress.py  run_cpp_e2e.cpp  run_e2e_test.sh  run_python_e2e.py  run_topology_chunks.py
tools/formula_gate/: build_candidate_mismatch_review.py  build_cpp_ordered_crop_dir.py  build_mismatch_ledger.py  crop_parity_summarize.py
tools/table_route/: bisect_table2.sh  bisect_table2_v2.sh  cpp_classify_smoke.cpp  python_classify_table2.py
tools/topology_workloads/: layout_ocr.json  layout_ocr_table.json  layout_only.json  mixed_baseline.json  ocr_only.json  table_heavy.json  table_only.json
